--- a/GameMath/00-testSpace/00-testSpace.vcxproj.filters
+++ b/GameMath/00-testSpace/00-testSpace.vcxproj.filters
@@ -18,5 +18,8 @@
     <ClCompile Include="main.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="04-matrix.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
