moved change.cpp to the proper place, need to fix sfwdraw.h.

--- a/GameMath/X-TestGame/X-TestGame.vcxproj.filters
+++ b/GameMath/X-TestGame/X-TestGame.vcxproj.filters
@@ -21,10 +21,16 @@
     <ClCompile Include="player.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="change.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Player.h">
       <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="change.h">
+      <Filter>Source Files</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
