--- a/GameMath/MathLib/MathLib.vcxproj
+++ b/GameMath/MathLib/MathLib.vcxproj
@@ -114,6 +114,7 @@
     <ClCompile Include="change.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="mat3.cpp" />
+    <ClCompile Include="mathutils.cpp" />
     <ClCompile Include="vec2.cpp" />
     <ClCompile Include="vec3.cpp" />
   </ItemGroup>
